Move cf readiness files to where controller lives
-move libs to project since that's where it gets pushed up

--- a/src/python/project/manifest.yml
+++ b/src/python/project/manifest.yml
@@ -2,4 +2,4 @@
 applications:
   - name: score-keeper 
     buildpack: python_buildpack
-    command: python src/python/project/controller.py
+    command: python controller.py
